[tool.poetry]
name = "tracking-numbers"
version = "0.1.2"
description = "Parse tracking numbers from couriers with no external dependencies"
authors = ["Jonathan Como <public@jcomo.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jcomo/tracking-numbers"
keywords = ["tracking", "tracking numbers", "courier", "shipping"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
